2005-01-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/term.c src/term_api.h: Instead of exporting ignore_enhanced_text
	from term.c as a global TBOOLEAN, provide a wrapper routine
	ignore_enhanced(TBOOLEAN flag);

	* src/graphics.c (do_plot) src/graph3d.c (do_3dplot): Call new routine
	ignore_enhanced() rather than directly setting a variable inside term.c.

2005-01-04  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/os2/gclient.c: Contains my attempt to implement pattern filling
	for the pm terminal. I gave this a bit of testing, but I have to admit
	that the result looks ugly together with the widelines option. But
	here you go anyway as 'widelines' has to be improved later anyway. It
	should work fine without 'widelines'...

	* src/os2/gnupmdrv.c: Newer versions of gcc on OS/2 no longer have
	fcloseall(), but _fcloseall().

	* src/os2/gclient.c src/os2/dialogs.c src/os2/print.c: Clean up by
	removing some unused variables and code (some put into #if 0/#endif);
	some minor  changes to  layout - this basically removes anoying warning
	messages during compilation.

2004-12-31  Ethan Merritt  <merritt@u.washington.edu>

	* term/estimate.trm src/term.h: New pseudo-terminal driver whose sole
	function is to parse a string in enhanced text mode and return the
	number of character-widths in the resulting output text.

	* configure.in NEWS src/term_api.h src/term.c (estimate_strlen):
	New routine estimate_strlen(char *text). Its default behaviour is to
	return strlen(text). But if the currently active terminal is in
	enhanced text mode, and the current plotting context does not disable
	enhanced text, then instead it calls the estimate.trm pseudo-terminal
	term->put_text(text) in order to determine the approximate width of
	the eventual output string.  This feature may be disabled using
	./configure --disable-strlen_estimation

	* src/graph3d.c src/graphics.c: Where strlen(text) is used to reserve