@@ -7,6 +7,18 @@
 	* src/graphics.c (do_plot) src/graph3d.c (do_3dplot): Call new routine
 	ignore_enhanced() rather than directly setting a variable inside term.c.
 
+	* src/gadgets.h: Add TBOOLEAN noenhanced flag to label_struct.
+
+	* docs/gnuplot.doc src/set.c (set_xyzlabel) src/save.c (save_set_all)
+	src/show.c (show_xyzlabel): New suboption `set ... {{no}enhanced}` for
+	plot title and axis labels, analogous to the noenhanced option for the
+	plot key entries.  This allows, for example, using a filename with
+	underscores as part of the plot title.
+
+	* src/graphics.c (do_plot) src/graph3d (do_3dplot): Disable enhanced
+	text processing while writing out plot title or axis label text if the
+	noenhanced flag is set in the corresponding label_struct.
+
 2005-01-04  Bastian Maerkisch  <bmaerkisch@web.de>
 
 	* src/os2/gclient.c: Contains my attempt to implement pattern filling
